2002-10-23  Bastien Nocera  <hadess@hadess.net>

	* configure.in: added more libtool fpic fu (from xine-lib)
	* src/Makefile.am: added -D_REENTRANT -D_FILE_OFFSET_BITS=64 thus
	making the gnome-vfs plugin actually work from totem itself, wheeee!

2002-10-23  Bastien Nocera  <hadess@hadess.net>

	* src/debug.h: remove debug for threads_enter/_leave
	* src/gtk-message.c: (gtk_message_make_selection_name): remove debug
	* src/gtk-xine.c: (gtk_xine_instance_init),
	(gtk_xine_set_fullscreen): move the Poor Man's Lock to the object,
	create and delete the window when entering/leaving fullscreen
	* src/totem.c: (totem_action_play), (on_mouse_click_fullscreen),
	(totem_callback_connect): more patching from John McCutchan
	<ttb@tentacle.dhs.org> for the fullscreen controls

2002-10-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: use a FileEntry instead of a simple entry
	* src/gtk-playlist.c: (gtk_tree_model_iter_previous),
	(gtk_tree_path_equals), (gtk_tree_selection_has_selected_foreach),
	(read_ini_line_int), (read_ini_line_string), (drop_cb),
	(update_current_from_playlist), (gtk_playlist_add_files),
	(gtk_playlist_foreach_selected), (gtk_playlist_remove_files),
	(init_columns), (treeview_row_changed), (init_treeview),
	(gtk_playlist_init), (gtk_playlist_finalize), (gtk_playlist_new),
	(gtk_playlist_add_one_mrl), (gtk_playlist_add_m3u),
	(gtk_playlist_add_pls), (gtk_playlist_add_mrl),
	(gtk_playlist_clear), (gtk_playlist_get_current_mrl),
	(gtk_playlist_has_previous_mrl), (gtk_playlist_has_next_mrl),
	(gtk_playlist_set_playing), (gtk_playlist_unset_playing),
	(gtk_playlist_set_previous), (gtk_playlist_set_next),
	(gtk_playlist_set_at_start), (gtk_playlist_class_init): remove all the
	debug (not needed anymore), add double-click to the playlist
	* src/totem.c: (totem_setup_preferences): make it compile again until
	I find the strength to write this boring code

2002-10-21  Bastien Nocera  <hadess@hadess.net>
