@@ -101,7 +101,7 @@ static char
 		return g_strdup_printf ("%d:%02d:%02d", hour, min, sec);
 	} else if (min > 0) {
 		/* minutes:seconds */
-		return g_strdup_printf ("%2d:%02d", min, sec);
+		return g_strdup_printf ("%d:%02d", min, sec);
 	} else {
 		/* seconds */
 		return g_strdup_printf ("%d sec", sec);
@@ -243,10 +243,31 @@ totem_action_play (Totem *totem, int offset)
 	play_pause_set_label (totem, retval);
 
 	/* FIXME remove when we're gone to 0.9.14 */
+	if (offset != 0)
+		return;
+
 	gtk_widget_set_sensitive (totem->fs_seek,
 			gtk_xine_is_seekable(GTK_XINE (totem->gtx)));
 	gtk_widget_set_sensitive (totem->seek,
 			gtk_xine_is_seekable(GTK_XINE (totem->gtx)));
+	{
+		GtkWidget *widget;
+		char *text, *time_text, *name;
+		int time;
+
+		widget = glade_xml_get_widget (totem->xml, "label1");
+		time = gtk_xine_get_stream_length (GTK_XINE (totem->gtx));
+		name = gtk_playlist_mrl_to_title (totem->mrl);
+		time_text = time_to_string (time);
+		text = g_strdup_printf
+			("<span size=\"medium\"><b>%s (%s)</b></span>",
+			 name, time_text);
+		rb_ellipsizing_label_set_markup (RB_ELLIPSIZING_LABEL (widget),
+				text);
+		g_free (text);
+		g_free (time_text);
+		g_free (name);
+	}
 }
 
 void
