@@ -1,5 +1,11 @@
 2002-10-23  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem.c: (time_to_string), (totem_action_play): display "2
+	minutes and 30 seconds" as "2:30" not " 2:30", and update time in the
+	label when we're playing the video
+
+2002-10-23  Bastien Nocera  <hadess@hadess.net>
+
 	* configure.in: added more libtool fpic fu (from xine-lib)
 	* src/Makefile.am: added -D_REENTRANT -D_FILE_OFFSET_BITS=64 thus
 	making the gnome-vfs plugin actually work from totem itself, wheeee!
